# AliGenFME

./: AliGenFastModelingEvent.cxx  AliGenFastModelingEvent.h  AnalysisACLiC.C  AnalysisCINT.C  Makefile  README.md  runACliC.sh  setup.C
bak/: AliGenFastModelingEvent.cxx  AliGenFastModelingEvent.h
inputs/: AnalysisResults_EmcalClu.root  AnalysisResults_EmcalEvH.root  AnalysisResults_EmcalFit.root  AnalysisResults_EmcalTrk.root
inputs/AnaGrid/: AddTasksEmcalFjetSparseMaker.C  AliAnalysisTaskEmcalFjetSparseMaker.cxx  AliAnalysisTaskEmcalFjetSparseMaker.h  AnalysisTrainAlienEmcalFjetSparseMaker.C  AnalysisTrainLocalEmcalFjetSparseMaker.C  submit.sh
inputs/macros/: AnaCombineEvH.C  AnaFitEvH.C
src/: AliGenFastModelingEvent.cxx  AliGenFastModelingEvent.h  AliGenFastModelingEventLinkDefs.h  CMakeLists.txt  clean.sh
